assets/test-package/tests/failing/ephemeral-compile-failure/ref.typ
#import "/src/lib.typ": helper

#helper("Ephemeral Compile Failure")
